feat: add hardhat in tests
