# src/api/static/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 info:
   title: DeFi Typescript API
   version: 1.0.0
-  description: Stateless API for interacting with common defi protocols using typescript abstractions 
+  description: Stateless API for interacting with common defi protocols using typescript abstractions
 
 servers:
   - url: /api/v1
@@ -15,7 +15,7 @@ tags:
     description: Data operations
   - name: Trades
     description: Trades operations
-  - name: Wallet 
+  - name: Wallet
     description: Wallet operations
 
 paths:
@@ -232,9 +232,6 @@ components:
           type: number
           format: double
           description: Amount of input token to trade
-        outputTokenAddress:
-          type: string
-          description: Contract address of the output token
         outputToken:
           type: string
           enum: [USDC, WETH, ETH]
@@ -244,4 +241,4 @@ components:
         - chain
         - inputTokenAddress
         - inputTokenAmount
-        - outputTokenAddress
+        - outputToken
